[package]
name = "blockchain-light-node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
libp2p      = { version = "0.51", features = ["tcp", "plaintext", "mplex"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
clap        = { version = "4", features = ["derive"] }
anyhow      = "1.0"
sha2        = "0.10"
hex         = "0.4"
sled        = "0.34"
env_logger  = "0.10"
log         = "0.4"